dataset1235/2025-2/2318198438/users/1324664027/executions/2445341515_3449543993.log
== SUBMISSION (2025-09-02 00:17:11)
-- CODE: 
from math import *

# faça seu código aqui!

c = float(input("e"))

a = c/(2*tan(pi/10))

v = 5*c*a

print(round((v), 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 11
    print(round((v), 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 11
    print(round((v), 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 11
    print(round((v), 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 11
    print(round((v), 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 11
    print(round((v), 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 11
    print(round((v), 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:17:32)
-- CODE: 
from math import *

# faça seu código aqui!

c = float(input("e"))

a = c/(2*tan(pi/10))

v = 5*c*a

print(round((v), 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
e123.11
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
e30.78
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
e276.99
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
e377.02
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
e69.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
e192.36
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:16:18)
-- CODE: 
from math import *

# faça seu código aqui!

c = float(input("e"))

a = c/(2*tan(pi/10))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
e
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
e
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
e
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
e
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
e
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
e
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
